<!--
  ~ Copyright © 2021 By Geeks Empire.
  ~
  ~ Created by Elias Fazel
  ~ Last modified 4/12/21 8:50 AM
  ~
  ~ Licensed Under MIT License.
  ~ https://opensource.org/licenses/MIT
  -->

<resources>

    <string name="applicationName">Ready Keep Notes</string>
    <string name="applicationMotto">Always Ready To Keep Your Notes</string>

    <string name="proceedAgreement">Agreed &amp; Proceed</string>
    <string name="privacyAgreement">Privacy Policy &amp; User Agreement</string>

    <string name="grantPermission">Grant</string>
    <string name="permissionMessage">Application Can Not Work Properly Without Permissions</string>

    <string name="proceedText">Proceed</string>

    <string name="waitingInformation">Setting Up Your Account…</string>

    <string name="signInText">Sign In</string>
    <string name="anonymouslySignInError">Error Setting Up Your Account ⚠</string>

    <string name="settingUpText">Setting Up…</string>

    <string name="retryText">Retry</string>

    <string name="retrievingFilesText">Retrieving Files Securely From Cloud ☁</string>
    <string name="transferFilesText">Transferring Files Securely To Cloud ☁</string>

    <string name="titleHintText">Title Undefined</string>
    <string name="contentHintText">Type Here…</string>
    <string name="pickColor">Pick</string>

    <string name="quickTakeTextHint">Always Ready To Keep Notes</string>

    <string name="noNotesTyped">You Didn\'t Type Anything</string>
    <string name="emptyNotesCollection">You Don\'t Have Any Saved Notes</string>

    <string name="deleteText">Delete</string>
    <string name="editText">Edit</string>
    <string name="shareText">Share</string>
    <string name="pinText">Pin</string>

    <string-array name="balloonItemsText">
        <item name="deleteText">Delete</item>
        <item name="editText">Edit</item>
        <item name="shareText">Share</item>
        <item name="pinText">Pin</item>
    </string-array>

    <string name="deletedText">Note Will Be Deleted</string>

    <string name="descriptionToggleText">Toggle Between Keyboard Typing &amp; Handwriting</string>
    <string name="descriptionSavingText">Save Everything Into Online &amp; Offline Database</string>

    <string name="descriptionColorPicker">Pick Color &amp; Line Width &amp; Transparency</string>
    <string name="descriptionClearAllPainting">Clear All Handwriting</string>
    <string name="descriptionRedo">Redo</string>
    <string name="descriptionUndo">Undo</string>

    <string name="descriptionSearch">Search</string>

    <string name="descriptionPreferences">Go To Preferences</string>
    <string name="descriptionGoBack">Back To Previous</string>

    <string name="descriptionToggleSecurity">Security To Access Your Notes By Authentications</string>
    <string name="descriptionToggleTheme">Change Theme Of Application</string>

    <string name="descriptionSupport">Contact Support Team</string>

    <string name="drawForWidthSample">Draw Here For Sample</string>

    <string name="searchText">Search</string>
    <string name="keyboardTypingText">Keyboard Typing</string>
    <string name="handwritingText">Handwriting</string>
    <string name="voiceRecordingText">Voice Recording</string>

    <string name="fingerTouchEditing">You Are Changing 👇. Click Here To Switch… </string>
    <string name="stylusTouchEditing">You Are Changing 🖊. Click Here To Switch… </string>

    <string name="typeToSearch">Type To Search…</string>

    <string name="migratingDatabaseEncryption">Migrating Encrypted Information…</string>

    <string name="doneText">Done.</string>

    <string name="biometricTitle">Ready Keep Note</string>
    <string name="biometricDescription">Authenticate Your Identity To Access Notes 🆔 🔐</string>

    <string name="errorOccurred">⚠ Error Occurred ⚠</string>

    <string name="offlineSavingError">⚠ Error Occurred Saving Data  ⚠</string>
    <string name="onlineSavingError">⚠ Error Occurred Uploading Data ⚠</string>
    <string name="noNetworkConnection">No Network Connection</string>

    <string name="welcomeText">Welcome %1$s To Ready Keep Notes…!</string>

    <string name="typeInstagram">Type Your Instagram Username</string>
    <string name="typeTwitter">Type Your Twitter Username</string>
    <string name="typeFacebook">Type Your Facebook Username</string>
    <string name="typePhoneNumber">Type Your Phone Number; +19876543210</string>

    <string name="receiveInvitationText">%1$s Invited You 🎉</string>
    <string name="inviteAction">Invite</string>
    <string name="inviteTitle">Invite To Ready Keep Notes</string>
    <string name="invitationDataReady">Invitation Data Copied &amp; Ready To Share</string>

    <string name="inAppUpdateDescription">An Update Has Just Been Installed</string>
    <string name="inAppUpdateAction">
        <![CDATA[
            Complete It!
        ]]>
    </string>

    <string name="notLogin">
        <![CDATA[
            Complete Your Account <br/>
            <small>Login To Sync Your Data</small>
        ]]>
    </string>

    <string name="followFacebook">Like Us</string>
    <string name="followTwitter">Follow Us</string>

    <string name="supportEmail" translatable="false">ReadyKeepNotes@GeeksEmpire.xyz</string>
    <string name="supportEmailGeeksEmpire" translatable="false">Support@GeeksEmpire.co</string>
    <string name="feedbackTag" translatable="false">Ready Keep Notes Direct Help | Feedback</string>

    <string name="signOutConfirmText">Confirm To Sign Out &amp; Delete All Data</string>
    <string name="signOutText">Sign Out</string>

</resources>
