<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notes.Taking.TakeNote">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="19dp"
        android:paddingHorizontal="17dp"
        android:layout_marginVertical="7dp"
        android:gravity="center_vertical"
        android:imeOptions="actionNext"
        android:lines="1"
        android:singleLine="true"
        android:ellipsize="end"
        android:textSize="23sp"
        android:textColor="@color/lighter"
        android:textStyle="bold"
        android:hint="@string/titleHintText"
        android:textColorHint="@color/default_color_transparent"
        android:fontFamily="monospace"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/default_color_dark"

        apps:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextContentView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="17dp"
        android:paddingTop="13dp"
        android:paddingBottom="79dp"
        android:gravity="start|top"
        android:textSize="19sp"
        android:hint="@string/contentHintText"
        android:textColorHint="@color/default_color_game_transparent"
        android:fontFamily="monospace"
        android:cursorVisible="true"
        android:focusable="true"
        android:background="@android:color/transparent"

        apps:layout_constraintTop_toBottomOf="@id/editTextTitleView"
        apps:layout_constraintBottom_toBottomOf="parent"/>

    <FrameLayout
        android:id="@+id/paintingCanvasContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        apps:layout_constraintTop_toBottomOf="@id/editTextTitleView"
        apps:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/toggleKeyboardHandwriting"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginVertical="19dp"
        android:layout_marginHorizontal="17dp"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textColor="@color/light"
        android:contentDescription="@string/descriptionToggleText"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"

        apps:cornerRadius="51dp"
        apps:elevation="13dp"
        apps:icon="@drawable/vector_icon_keyboard"
        apps:iconSize="31dp"
        apps:iconGravity="textStart"
        apps:iconTint="@color/light"
        apps:iconPadding="0dp"
        apps:rippleColor="@color/default_color_light"
        apps:backgroundTint="@color/default_color_transparent_twice"

        apps:layout_constraintBottom_toBottomOf="parent"
        apps:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/audioRecordView"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginVertical="7dp"
        android:layout_marginHorizontal="17dp"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textColor="@color/light"
        android:contentDescription="@string/descriptionToggleText"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"

        apps:cornerRadius="51dp"
        apps:elevation="13dp"
        apps:icon="@drawable/vector_icon_voice_recorder"
        apps:iconSize="19dp"
        apps:iconGravity="textStart"
        apps:iconTint="@color/light"
        apps:iconPadding="0dp"
        apps:rippleColor="@color/default_color_light"
        apps:backgroundTint="@color/default_color_transparent_twice"

        apps:layout_constraintBottom_toTopOf="@id/toggleKeyboardHandwriting"
        apps:layout_constraintStart_toStartOf="@id/toggleKeyboardHandwriting"
        apps:layout_constraintEnd_toEndOf="@id/toggleKeyboardHandwriting"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/savingView"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginVertical="19dp"
        android:layout_marginHorizontal="17dp"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textColor="@color/light"
        android:contentDescription="@string/descriptionSavingText"
        android:insetLeft="0dp"
        android:insetTop="00dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"

        apps:cornerRadius="51dp"
        apps:elevation="13dp"
        apps:icon="@drawable/vector_icon_save"
        apps:iconSize="71dp"
        apps:iconGravity="textStart"
        apps:iconTint="@color/light"
        apps:iconPadding="0dp"
        apps:rippleColor="@color/default_color_game_light"
        apps:backgroundTint="@color/default_color_game_transparent"

        apps:layout_constraintBottom_toBottomOf="parent"
        apps:layout_constraintStart_toStartOf="parent"/>

    <net.geeksempire.loadingspin.SpinKitView
        android:id="@+id/waitingViewUpload"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:visibility="invisible"

        apps:SpinKit_Style="RotatingCircle"
        apps:SpinKit_Color="@color/cyan_transparent"

        apps:layout_constraintTop_toTopOf="@id/savingView"
        apps:layout_constraintBottom_toBottomOf="@id/toggleKeyboardHandwriting"
        apps:layout_constraintStart_toEndOf="@id/savingView"
        apps:layout_constraintEnd_toStartOf="@id/toggleKeyboardHandwriting"/>

    <include
        layout="@layout/painting_toolbar_layout"

        android:id="@+id/paintingToolbarInclude"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:elevation="23dp"
        android:visibility="invisible"

        apps:layout_constraintTop_toTopOf="@id/paintingCanvasContainer" />

    <include
        layout="@layout/colors_palette_stroke_selector_layout"

        android:id="@+id/colorPaletteInclude"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="29dp"
        android:paddingEnd="29dp"
        android:elevation="23dp"
        android:visibility="invisible"

        apps:layout_constraintTop_toBottomOf="@id/paintingToolbarInclude"
        apps:layout_constraintBottom_toBottomOf="parent"
        apps:layout_constraintStart_toStartOf="@id/paintingToolbarInclude"
        apps:layout_constraintEnd_toEndOf="@id/paintingToolbarInclude"/>

</androidx.constraintlayout.widget.ConstraintLayout>