<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2020 By Geeks Empire.
  ~
  ~ Created by Elias Fazel on 11/8/20 9:53 AM
  ~ Last modified 11/8/20 9:45 AM
  ~
  ~ Licensed Under MIT License.
  ~ https://opensource.org/licenses/MIT
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="13dp"
    android:paddingHorizontal="13dp"
    android:background="@android:color/transparent"
    tools:context=".AccountManager.UserInterface.AccountInformation">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="57dp"
        android:scaleType="fitCenter"
        android:src="@drawable/official_business_logo"/>

    <net.geeksempire.blurry.effect.view.RealtimeBlurView
        android:id="@+id/profileBlurView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        apps:realtimeOverlayColor="@color/light_blurry_color"
        apps:realtimeBlurRadius="7dp"/>

    <net.geekstools.imageview.customshapes.ShapesImage
        android:id="@+id/profileImageView"
        android:layout_width="211dp"
        android:layout_height="211dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="29dp"
        android:scaleType="centerCrop"
        android:src="@drawable/not_login_icon"

        apps:shape="circle"

        apps:layout_constraintTop_toTopOf="parent"
        apps:layout_constraintStart_toStartOf="parent"
        apps:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/inviteDirectlyPrivateMessage"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_margin="3dp"
        android:contentDescription="@string/inviteTitle"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:visibility="invisible"

        apps:cornerRadius="51dp"
        apps:elevation="23dp"
        apps:icon="@drawable/share_icon"
        apps:iconSize="79dp"
        apps:iconGravity="textStart"
        apps:iconTint="@android:color/transparent"
        apps:iconTintMode="add"
        apps:iconPadding="0dp"
        apps:rippleColor="@color/cyberGreen"
        apps:backgroundTint="@color/default_color_transparent"

        apps:layout_constraintTop_toTopOf="@id/profileImageView"
        apps:layout_constraintBottom_toBottomOf="@id/profileImageView"
        apps:layout_constraintStart_toStartOf="parent"
        apps:layout_constraintEnd_toStartOf="@id/profileImageView"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="23dp"
        android:layout_marginHorizontal="19dp"
        android:text="@string/welcomeText"
        android:textSize="51sp"
        android:textColor="@color/dark"
        android:fontFamily="@font/upcil"

        apps:layout_constraintTop_toBottomOf="@id/profileImageView"
        apps:layout_constraintStart_toStartOf="parent"
        apps:layout_constraintEnd_toEndOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/signupLoadingView"
        android:layout_width="173dp"
        android:layout_height="173dp"
        android:layout_marginVertical="17dp"
        android:visibility="invisible"

        apps:lottie_loop="true"
        apps:lottie_repeatMode="restart"
        apps:lottie_rawRes="@raw/fluid_loading_animation"

        apps:layout_constraintTop_toBottomOf="@id/welcomeTextView"
        apps:layout_constraintStart_toStartOf="parent"
        apps:layout_constraintEnd_toEndOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/socialMediaScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="3dp"
        android:requiresFadingEdge="vertical"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="7dp"
        android:visibility="invisible"

        apps:layout_constraintTop_toBottomOf="@id/welcomeTextView"
        apps:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/socialMediaContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp">

            <!-- Instagram -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/instagramAddressLayout"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:layout_marginTop="7dp"
                android:hint="@string/typeInstagram"
                android:textColorHint="@color/purple"

                apps:boxBackgroundMode="outline"
                apps:boxBackgroundColor="@color/white"
                apps:boxCornerRadiusTopStart="13dp"
                apps:boxCornerRadiusTopEnd="13dp"
                apps:boxCornerRadiusBottomStart="13dp"
                apps:boxCornerRadiusBottomEnd="13dp"
                apps:boxStrokeColor="@color/default_color_game"
                apps:boxStrokeWidth="1dp"
                apps:hintEnabled="true"
                apps:hintAnimationEnabled="true"
                apps:hintTextColor="@color/purple"
                apps:errorEnabled="false"
                apps:errorTextColor="@color/red"

                apps:layout_constraintTop_toTopOf="parent"
                apps:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/instagramAddressView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="11dp"
                    android:paddingStart="17dp"
                    android:paddingEnd="77dp"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:textSize="19sp"
                    android:textColor="@color/dark"
                    android:textColorHint="@color/dark"
                    android:singleLine="true"
                    android:ellipsize="start"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:enabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="77dp"
                android:layout_height="0dp"
                android:padding="19dp"
                android:src="@drawable/instagram_logo"

                apps:layout_constraintTop_toTopOf="@id/instagramAddressLayout"
                apps:layout_constraintBottom_toBottomOf="@id/instagramAddressLayout"
                apps:layout_constraintEnd_toEndOf="@id/instagramAddressLayout" />

            <!-- Twitter -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/twitterAddressLayout"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:layout_marginTop="7dp"
                android:hint="@string/typeTwitter"
                android:textColorHint="@color/default_color_bright"

                apps:boxBackgroundMode="outline"
                apps:boxBackgroundColor="@color/white"
                apps:boxCornerRadiusTopStart="13dp"
                apps:boxCornerRadiusTopEnd="13dp"
                apps:boxCornerRadiusBottomStart="13dp"
                apps:boxCornerRadiusBottomEnd="13dp"
                apps:boxStrokeColor="@color/default_color"
                apps:boxStrokeWidth="1dp"
                apps:hintEnabled="true"
                apps:hintAnimationEnabled="true"
                apps:hintTextColor="@color/default_color_bright"
                apps:errorEnabled="false"
                apps:errorTextColor="@color/red"

                apps:layout_constraintTop_toBottomOf="@id/instagramAddressLayout"
                apps:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/twitterAddressView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="11dp"
                    android:paddingStart="17dp"
                    android:paddingEnd="77dp"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:textSize="19sp"
                    android:textColor="@color/dark"
                    android:textColorHint="@color/dark"
                    android:singleLine="true"
                    android:ellipsize="start"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:enabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="77dp"
                android:layout_height="0dp"
                android:padding="15dp"
                android:tint="@color/blue"
                android:src="@drawable/twitter_bird"

                apps:layout_constraintTop_toTopOf="@id/twitterAddressLayout"
                apps:layout_constraintBottom_toBottomOf="@id/twitterAddressLayout"
                apps:layout_constraintEnd_toEndOf="@id/twitterAddressLayout" />

            <!-- Phone Number -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberAddressLayout"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:layout_marginTop="7dp"
                android:hint="@string/typePhoneNumber"
                android:textColorHint="@color/green"

                apps:boxBackgroundMode="outline"
                apps:boxBackgroundColor="@color/white"
                apps:boxCornerRadiusTopStart="13dp"
                apps:boxCornerRadiusTopEnd="13dp"
                apps:boxCornerRadiusBottomStart="13dp"
                apps:boxCornerRadiusBottomEnd="13dp"
                apps:boxStrokeColor="@color/cyberGreen"
                apps:boxStrokeWidth="1dp"
                apps:hintEnabled="true"
                apps:hintAnimationEnabled="true"
                apps:hintTextColor="@color/green"
                apps:errorEnabled="false"
                apps:errorTextColor="@color/red"

                apps:layout_constraintTop_toBottomOf="@id/twitterAddressLayout"
                apps:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberAddressView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="11dp"
                    android:paddingStart="17dp"
                    android:paddingEnd="77dp"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:imeOptions="actionDone"
                    android:textSize="19sp"
                    android:textColor="@color/dark"
                    android:textColorHint="@color/dark"
                    android:singleLine="true"
                    android:ellipsize="start"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:enabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="77dp"
                android:layout_height="0dp"
                android:padding="15dp"
                android:src="@drawable/phone_icon"

                apps:layout_constraintTop_toTopOf="@id/phoneNumberAddressLayout"
                apps:layout_constraintBottom_toBottomOf="@id/phoneNumberAddressLayout"
                apps:layout_constraintEnd_toEndOf="@id/phoneNumberAddressLayout" />

            <!-- Next & Submit -->
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/nextSubmitView"
                android:layout_width="113dp"
                android:layout_height="113dp"
                android:layout_marginVertical="7dp"

                apps:lottie_rawRes="@raw/next_submit_animation"

                apps:layout_constraintTop_toBottomOf="@id/phoneNumberAddressLayout"
                apps:layout_constraintEnd_toEndOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/updatingLoadingView"
                android:layout_width="113dp"
                android:layout_height="113dp"
                android:layout_marginVertical="7dp"
                android:visibility="invisible"

                apps:lottie_loop="true"
                apps:lottie_repeatMode="restart"
                apps:lottie_rawRes="@raw/fluid_loading_animation"

                apps:layout_constraintTop_toBottomOf="@id/phoneNumberAddressLayout"
                apps:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>